--- a/src/routes/docs/[...2]categories/[...1]create.md
+++ b/src/routes/docs/[...2]categories/[...1]create.md
@@ -6,7 +6,7 @@ description: Installing the default layout.
 
 This is how to create a new category, make sure that all the required fields are filled out before you save.
 
-on the categories page you will see a button named `new`, click on that to be redirected to the new category page
+on the categories page you will see a button named new, click on that to be redirected to the new category page
 
 Here is a list with all required fields for categories
 
